// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ErrorMessage snapshot matches snapshot for error type 1`] = `
<div
  class="rounded-lg border p-4 bg-red-50 dark:bg-red-900/20 border-red-200 dark:border-red-800"
>
  <div
    class="flex items-start gap-3"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-alert w-5 h-5 flex-shrink-0 mt-0.5 text-red-500 dark:text-red-400"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <div
      class="flex-1 min-w-0"
    >
      <h3
        class="text-sm font-semibold mb-1 text-red-800 dark:text-red-300"
      >
        Request failed
      </h3>
      <p
        class="text-sm text-red-700"
      >
        The server returned an error. Please try again.
      </p>
    </div>
  </div>
</div>
`;

exports[`ErrorMessage snapshot matches snapshot for warning type 1`] = `
<div
  class="rounded-lg border p-4 bg-yellow-50 dark:bg-yellow-900/20 border-yellow-200 dark:border-yellow-800"
>
  <div
    class="flex items-start gap-3"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-triangle-alert w-5 h-5 flex-shrink-0 mt-0.5 text-yellow-500 dark:text-yellow-400"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
      />
      <path
        d="M12 9v4"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
    <div
      class="flex-1 min-w-0"
    >
      <h3
        class="text-sm font-semibold mb-1 text-yellow-800 dark:text-yellow-300"
      >
        Unsaved changes
      </h3>
      <p
        class="text-sm text-yellow-700"
      >
        You have unsaved changes that will be lost.
      </p>
    </div>
  </div>
</div>
`;

exports[`ErrorMessage snapshot matches snapshot with actionable buttons 1`] = `
<div
  class="rounded-lg border p-4 bg-red-50 dark:bg-red-900/20 border-red-200 dark:border-red-800"
>
  <div
    class="flex items-start gap-3"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-circle-alert w-5 h-5 flex-shrink-0 mt-0.5 text-red-500 dark:text-red-400"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <div
      class="flex-1 min-w-0"
    >
      <p
        class="text-sm text-red-700"
      >
        Something went wrong.
      </p>
      <div
        class="flex flex-wrap gap-2 mt-3"
      >
        <button
          class="px-3 py-1.5 text-sm font-medium rounded-md transition-colors bg-blue-600 text-white hover:bg-blue-700"
        >
          Retry
        </button>
        <button
          class="px-3 py-1.5 text-sm font-medium rounded-md transition-colors bg-white dark:bg-slate-800 text-gray-700 dark:text-slate-300 border border-gray-300 dark:border-slate-600 hover:bg-gray-50 dark:hover:bg-slate-700"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
</div>
`;
